--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,7 @@ inherit_from:
   - "https://www.goodcop.style/tabs.yml"
 
 AllCops:
-  TargetRubyVersion: 3.0
+  TargetRubyVersion: 3.1
 
 Naming/MethodName:
   Enabled: false
@@ -18,4 +18,7 @@ Lint/Void:
   Enabled: false
 
 Style/MissingRespondToMissing:
+  Enabled: false
+
+Style/ColonMethodCall:
   Enabled: false
