--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -25,4 +25,4 @@ jobs:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: Run tests
-        run: bundle exec gd
+        run: bundle exec qt
