--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -2,20 +2,19 @@ name: Ruby
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
   contents: read
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['3.2', '3.3']
+        ruby-version: ["3.2", "3.3"]
 
     steps:
       - uses: actions/checkout@v3
@@ -25,4 +24,4 @@ jobs:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: Run tests
-        run: bundle exec gd
+        run: bundle exec qt
