--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -23,5 +23,5 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      - name: Run tests
-        run: bundle exec qt
+      - name: Run Rubocop
+        run: bundle exec rubocop
