--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -10,11 +10,19 @@ permissions:
   contents: read
 
 jobs:
+  ruby-versions:
+    uses: ruby/actions/.github/workflows/ruby_versions.yml@3fbf038d6f0d8043b914f923764c61bc2a114a77
+    with:
+      engine: all
+      min_version: 3.1
+
   test:
+    needs: ruby-versions
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        ruby-version: ["3.2", "3.3"]
+        ruby-version: ${{ fromJson(needs.ruby-versions.outputs.versions) }}
 
     steps:
       - uses: actions/checkout@v3
