--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Run Rubocop
         run: bundle exec rubocop
       - name: Quickdraw tests
-        run: bundle exec qt "./test/**/*.test.rb"
+        run: bundle exec qt -p1 "./test/**/*.test.rb"
