--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -23,7 +23,6 @@ jobs:
       fail-fast: false
       matrix:
         ruby-version: ${{ fromJson(needs.ruby-versions.outputs.versions) }}
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up Ruby
@@ -34,6 +33,22 @@ jobs:
           bundler-args: --without development
       - name: Quickdraw tests
         run: bundle exec qt -t 1 "./test/**/*.test.rb"
+  allocations_test:
+    needs: ruby-versions
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby-version:
+          ["3.2", "3.3", "3.4", "head", "truffleruby", "truffleruby-head"]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          bundler-args: --without development
       - name: Test allocations
         run: bundle exec ./allocations_test.rb
   rubocop:
