--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,6 +19,7 @@ jobs:
   test:
     needs: ruby-versions
     runs-on: ubuntu-latest
+    continue-on-error: ${{ contains(matrix.ruby-version, 'jruby') }}
     strategy:
       fail-fast: false
       matrix:
